--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   height: auto;
   width: 100%;
   background-color: #0b0c10;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
