--- a/src/Layout/Header/Header.css
+++ b/src/Layout/Header/Header.css
@@ -1,23 +1,35 @@
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   color: white;
-  padding-top: 2rem;
+  padding: 20px 0px;
+  width: 80%;
 }
-.navbar,
-.nav-container {
+.y-hide {
+  overflow-y: hidden;
+}
+.logo_anchor {
+  width: 11%;
+}
+.logo {
+  max-width: 100%;
+  object-fit: contain;
+}
+.navbar2,
+.nav-container2 {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
 }
+.navbar2 {
+  margin-right: 2rem;
+}
 .nav-links {
   text-decoration: none;
   color: white;
-  font-size: 1.4rem;
-  transform: translateX(2rem);
-  opacity: 0;
+  font-size: 1.2rem;
   transition: all 0.45s ease-in-out;
 }
 .nav-links:nth-child(4) {
@@ -40,13 +52,13 @@
   height: 46px;
   width: 52px;
   z-index: 2;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   background-color: #1a1a1d;
   padding: 13px;
   cursor: pointer;
   margin-left: 2rem;
+  display: none;
 }
 .line {
   display: block;
@@ -66,7 +78,6 @@
 .line3 {
   transform-origin: 0% 100%;
   transition: transform 0.4s ease-in-out;
-  background-color: red;
 }
 .open .line1 {
   transform: rotate(45deg);
@@ -77,18 +88,35 @@
 .open .line3 {
   transform: rotate(-45deg);
 }
+.small-head {
+  margin-right: 0rem !important;
+  padding-right: 0rem !important;
+  min-width: auto !important;
+}
+@media screen and (max-width: 1053px) {
+  .header {
+    width: 80%;
+  }
+}
 @media screen and (max-width: 716px) {
-  .navbar {
+  .header {
+    width: 90%;
+  }
+  .small-head {
+    display: none !important;
+  }
+  .navbar2 {
     position: fixed;
     flex-direction: column;
     background-color: #0b0c10;
     right: 0%;
     top: 0;
     height: 100%;
-    width: 40%;
+    width: 80%;
     align-items: flex-start;
     justify-content: flex-start;
     padding: 10rem 3rem;
+    z-index: 5;
     transform: translateX(100%);
     opacity: 0;
     transition: all 0.45s ease-in-out;
@@ -120,10 +148,23 @@
   .open-nav {
     transform: translateX(0rem);
     opacity: 1;
+    margin: 0;
+  }
+  .hamburger-lines {
+    display: flex;
+    z-index: 6;
+  }
+}
+@media screen and (max-width: 649px) {
+  .logo_anchor {
+    width: 25%;
+  }
+  .navbar2 {
+    width: 100%;
   }
 }
 @media screen and (max-width: 506px) {
-  .navbar {
-    width: 60%;
+  .logo_anchor {
+    width: 30%;
   }
 }
