--- a/src/Pages/Club/Club.css
+++ b/src/Pages/Club/Club.css
@@ -3,18 +3,33 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  width: 70%;
+  width: 80%;
   padding: 2rem 0rem;
-  gap: 30px;
+  gap: 20px;
+  position: relative;
+}
+.club::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  bottom: 0%;
 }
 .club h1 {
   color: #c3073f;
-  font-size: 2.5bbbrem;
+  font-size: 2.5rem;
+  padding-left: 2%;
+}
+.club h1:last-of-type {
+  margin-top: 40px;
+  margin-bottom: 0rem;
 }
 .club p {
   color: white;
   width: 60%;
   line-height: 1.5;
+  padding-left: 2%;
   font-size: 1.8rem;
 }
 
@@ -27,14 +42,21 @@
 .image-box {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  text-align: left;
+  text-align: center;
   color: white;
+  height: 140px;
+}
+.club p {
+  color: white;
+  width: 90%;
+  line-height: 1.5;
+  font-size: 1.4rem;
 }
 .image-box p {
-  font-size: 1.2rem !important;
+  font-size: 1.1rem !important;
   width: 100% !important;
 }
 .image-box img {
@@ -42,21 +64,110 @@
   width: 100%;
   object-fit: contain;
 }
-.club p {
-  color: white;
-  width: 60%;
-  line-height: 1.5;
-  font-size: 1.8rem;
+.club p button {
+  margin-left: 20px;
+}
+.mask-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 4rem;
+  border-top: 2px solid grey;
+  padding-top: 1rem;
+}
+.left-mask {
+  flex: 0.7;
+}
+.right-mask {
+  flex: 0.3;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 .mask {
-  background-color: #c4c4c4;
   border: none;
-  font-size: 1.5rem;
-  color: black;
-  padding: 18px 60px;
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+  width: 60%;
+  background: #02bf76;
+  color: white;
+  border-radius: 25px;
+  padding: 15px 0px;
+  transition: all 0.25s ease-in-out;
+  font-size: 1.3rem;
+}
+.meta {
+  max-width: 24%;
+}
+.mask:hover {
+  transform: scale(0.9);
+  background-color: white;
+  color: #02bf76;
+  font-weight: bold;
 }
 @media screen and (max-width: 1514px) {
   .club {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 1213px) {
+  .mask {
     width: 90%;
+  }
+}
+@media screen and (max-width: 927px) {
+  .club_img-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .club p {
+    width: 80%;
+  }
+  .mask {
+    width: 60%;
+  }
+  .mask-div {
+    flex-direction: column;
+    text-align: center;
+  }
+  .mask-div p {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 702px) {
+  .mask {
+    width: 40%;
+  }
+}
+@media screen and (max-width: 662px) {
+  .club {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 513px) {
+  .club_img-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  .club p {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 479px) {
+  .club p button {
+    margin-left: 0px;
+  }
+  .mask {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 380px) {
+  .mask {
+    width: 60%;
   }
 }
