--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,10 +3,11 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
-  width: 67%;
+  width: 85%;
   text-align: left;
   color: white;
   margin: 3rem auto;
+  margin-top: 0rem;
 }
 .home img {
   width: 100%;
@@ -14,19 +15,34 @@
 }
 .home h1 {
   font-size: 2.5rem;
-  padding: 2rem 0rem;
-  margin: 2rem 0rem;
   color: #66fcf1;
-  border-top: 2px solid white;
   width: 100%;
+  padding-top: 2rem;
+  padding-left: 3.5%;
 }
 .home p {
-  font-size: 2.5rem;
-  padding: 2rem 0rem;
-  margin: 2rem 0rem;
+  font-size: 2rem;
+  margin: 1rem 0rem;
   color: white;
-  border-top: 2px solid white;
   width: 100%;
+  padding-left: 5%;
+}
+.final {
+  margin: 0 !important;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 0% !important;
+}
+.final p {
+  border: none;
+  flex: 0.7;
+  width: max-content;
+  padding-left: 0%;
+}
+.final img {
+  flex: 0.3;
+  max-width: 20%;
 }
 .home p span {
   color: #950740;
@@ -34,6 +50,17 @@
 @media screen and (max-width: 1100px) {
   .home {
     width: 80%;
+  }
+}
+@media screen and (max-width: 931px) {
+  .final {
+    flex-direction: column;
+  }
+  .final p {
+    width: auto;
+  }
+  .final img {
+    max-width: 35%;
   }
 }
 @media screen and (max-width: 716px) {
@@ -45,6 +72,16 @@
     font-size: 1.7rem;
   }
 }
+@media screen and (max-width: 662px) {
+  .home {
+    width: 100%;
+  }
+  .home h1,
+  .home p {
+    padding-left: 2rem;
+  }
+}
+
 @media screen and (max-width: 442px) {
   .home p,
   .home h1 {
