--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,34 @@
+@font-face {
+  font-family: "Custom";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans"), local("OpenSans"),
+    url("./Assets/FontsFree-Net-marschel-pro.ttf");
+}
+@font-face {
+  font-family: "Text";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans"), local("OpenSans"),
+    url("./Assets/metropolis-1/Metropolis-Medium.otf");
+}
 * {
-  font-family: "Abel", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+p {
+  font-family: "Text", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+  font-family: "Custom", sans-serif;
+}
+* ::after {
+  background-color: grey !important;
 }
